[tool.poetry]
name="deploy_bot"
version = "1.0"
description = "[team Team] Deploy System"
authors = ["team Team <team@teamteam.dev>"]
packages = [{include = "deploy_bot", from = "src"}]

[tool.poetry.scripts]
deploy_bot = "deploy_bot:main"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
