[project]
name = "gh-deploy"
version = "1.0"
description = "GitHub webhook-based deployment system"
license = "MIT"
authors = [
    {name = "[team Team]", email = "team@teamteam.dev"}
]
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.2.2,<3.0",
    "PyYAML>=6.0"
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[project.scripts]
gh-deploy = "gh_deploy:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
