[project]
name = "gh-deploy"
version = "1.0"
description = "GitHub webhook-based deployment system"
license = "MIT"
authors = [
    {name = "[team Team]", email = "team@teamteam.dev"}
]
requires-python = ">=3.10"
dependencies = [
    "gunicorn>=23.0.0",
    "pydantic>=2.11.3",
    "PyYAML>=6.0",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[project.scripts]
gh-deploy = "gh_deploy.main:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN204", "B019", "COM812",
    "D100", "D101", "D102", "D103", "D104", "D106", "D107", "D203", "D213",
    "EM101",
    "FIX002",
    "PLR0911", "PLW0603",
    "S104", "S106", "S603", "S604",
    "T201", "TD002", "TD003", "TRY003",
]
